--- a/web3/nginx/Dockerfile
+++ b/web3/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.22.0-alpine
 
-COPY index.html /usr/share/nginx/html
+COPY *.html /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
